# Latino-Curses

./: .gitignore  CMakeLists.txt  README.md  instalar.sh
PDCursesMod/: README.md  curses.h
PDCursesMod/cmake/: build_dependencies.cmake  dll_version.cmake  project_common.cmake
PDCursesMod/compiled/: pdcurses.exp  pdcurses.lib
PDCursesMod/ncurses/: CMakeLists.txt
PDCursesMod/sdl2/: CMakeLists.txt
PDCursesMod/wincon/: CMakeLists.txt
PDCursesMod/wingui/: CMakeLists.txt
ejemplos/: cursesPrueva.lat
includes/: README.md  curses.h  menu.h  term.h
src/: latcurseslib.c  latino-curses.c
